[tool:pytest]
filterwarnings =
    # Currently unsatisfiable
    ignore:Workbench will be moved from pyface:PendingDeprecationWarning

[build-system]
requires =
    apptools
    envisage
    numpy
    pyface>=6.1.1
    pygments
    traits>=6.0.0
    traitsui>=7.0.0
    vtk

build-backend = "setuptools.build_meta"